--- a/app/src/main/res/menu/menu_p.xml
+++ b/app/src/main/res/menu/menu_p.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    >
 
     <item
         android:id="@+id/settingitem"
+
         android:title="Settings" />
     <item
         android:id="@+id/contactitem"
